--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oracle-skills",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Install Oracle skills to Claude Code, OpenCode, Cursor, and 11+ AI coding agents",
   "type": "module",
   "bin": {
@@ -11,9 +11,9 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm --clean",
-    "dev": "tsx src/index.ts",
-    "prepublishOnly": "npm run build"
+    "build": "bun build src/index.ts --outdir dist --target bun --minify",
+    "dev": "bun run src/index.ts",
+    "prepublishOnly": "bun run build"
   },
   "keywords": [
     "oracle",
@@ -24,7 +24,8 @@
     "codex",
     "ai-agents",
     "soul-brews",
-    "cli"
+    "cli",
+    "bun"
   ],
   "author": "Soul Brews Studio",
   "license": "MIT",
@@ -41,8 +42,6 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "tsup": "^8.0.0",
-    "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
