--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Install Oracle skills to Claude Code, OpenCode, Cursor, and 11+ AI coding agents",
   "type": "module",
   "bin": {
-    "oracle-skills": "./dist/index.js"
+    "oracle-skills": "./src/index.ts"
   },
   "files": [
     "dist",
