--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,52 +7,58 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  unit:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install
+      - run: bun test test/utils.test.ts
+
+  integration:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install
+      - run: bun test test/index.test.ts
+
+  smoke:
+    name: Smoke Tests
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        bun-version: ['latest']
-
     steps:
       - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+      - name: Install cal (Ubuntu)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y ncal
+      - run: bun install
+      - run: bun test test/smoke.test.ts
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: ${{ matrix.bun-version }}
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Run tests
-        run: bun test
-
-      - name: Test CLI --help
-        run: bun run src/index.ts --help
-
-      - name: Test CLI agents
-        run: bun run src/index.ts agents
-
-      - name: Test CLI --list
-        run: bun run src/index.ts --list
+  cli:
+    name: CLI Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install
+      - run: bun run src/index.ts --help
+      - run: bun run src/index.ts agents
+      - run: bun run src/index.ts --list
         timeout-minutes: 2
 
   build:
+    name: Build
     runs-on: ubuntu-latest
-    needs: test
-
+    needs: [unit, integration, smoke, cli]
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Build
-        run: bun run build
-
-      - name: Verify dist exists
-        run: test -f dist/index.js
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install
+      - run: bun run build
+      - run: test -f dist/index.js
