--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,9 +50,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
       - run: bun install
-      - run: bun run src/index.ts --help
-      - run: bun run src/index.ts agents
-      - run: bun run src/index.ts --list
+      - run: bun run src/cli/index.ts --help
+      - run: bun run src/cli/index.ts agents
+      - run: bun run src/cli/index.ts --list
         timeout-minutes: 2
 
   build:
